--- a/app.plist
+++ b/app.plist
@@ -11,13 +11,13 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://private.jonathan.kro.kr:3000/YourSchool.ipa</string>
+					<string>https://github.com/Jonathan0827/YourSchool/blob/main/YourSchool.ipa?raw=true</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.junehyeop.YourSchool</string>
+				<string>com.7595882b-706f-4851-919b-94928ae22a63</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
