--- a/app.plist
+++ b/app.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.7595882b-706f-4851-919b-94928ae22a63</string>
+				<string>com.junehyeop.YourSchool</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
