--- a/app.plist
+++ b/app.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/Jonathan0827/YourSchool/blob/main/YourSchool.ipa?raw=true</string>
+					<string>https://github.com/Jonathan0827/YourSchool/raw/main/build/YourSchool.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
